Removes handlebars from the server

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, user-scalable=no">
 	<title>PWA Demo App</title>
+	<link rel="stylesheet" href="/public/styles/shell-styles.css"/>
 </head>
 <body>
-	<style>
-		{{inlineStyles}}
-	</style>
 	<div class="content">
 		<div class="header">Reddit - Top posts</div>
 		<div id="post-content">
