Adds manifest link in the shell

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, user-scalable=no">
 	<title>PWA Demo App</title>
 	<link rel="stylesheet" href="/public/styles/shell-styles.css"/>
+	<link rel="manifest" href="/manifest.json"/>
 </head>
 <body>
 	<div class="content">
